fixed subnav alignment

--- a/app/scss/components/_nav.scss
+++ b/app/scss/components/_nav.scss
@@ -292,6 +292,7 @@
     justify-content: flex-end;
     max-width: 1080px;
     margin: 0 auto;
+    padding: 0rem 2rem;
     transition: padding 150ms ease-in;
 
     @include breakpoint(lg-tablet) {
